footer alignment fixed in tablet view

--- a/static/site/css/primary-menu.css
+++ b/static/site/css/primary-menu.css
@@ -1180,7 +1180,7 @@ License: http://codecanyon.net/licenses
 }
 .primary-menu-menu>li.has-megamenu .megamenu ul>li a{
 	font-size: 13px;
-	font-weight: 500;
+	font-weight: 600;
 }
 .primary-menu-menu>li>.megamenu .megamenu-row .col3{
 	width: 16.25%;
